fixed issues with horizontal scrolling appearing due to offpage elements

--- a/src/styles/_comp.scss
+++ b/src/styles/_comp.scss
@@ -97,7 +97,7 @@
 
     .comp-info {
       @include md {
-        margin-left: 3.4rem;
+        // margin-left: 3.4rem;
         padding-right: 2rem;
         padding-top: 6.5rem;
       }
